[gd_scene load_steps=6 format=3 uid="uid://ckkus01rk2i4x"]

[ext_resource type="Script" uid="uid://4ew43eal84ad" path="res://scripts/gui/new_gui/cell_base.gd" id="1_oietp"]
[ext_resource type="Texture2D" uid="uid://dlu0fajieyqty" path="res://assets/ingredientsPNG/cherry_cake.png" id="2_g86qr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sra1p"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.83, 0.83, 0.83, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.59, 0.59, 0.59, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_utv67"]
size = Vector2(97.1394, 95.3327)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xm27"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(1, 0.6, 0.2, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="CellBase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_oietp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 130.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_sra1p")

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
z_index = 24
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/CenterContainer"]
z_index = 30
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_g86qr")

[node name="InventoryCellAreaUi" type="Area2D" parent="Panel"]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Panel/InventoryCellAreaUi"]
position = Vector2(65.4204, 64.5482)
shape = SubResource("RectangleShape2D_utv67")

[node name="ActiveStateFrame" type="Panel" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 130.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4xm27")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 53.0
offset_right = 85.0
offset_bottom = 76.0
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
text = "-1"
horizontal_alignment = 1
vertical_alignment = 1
